# multibind-publication-code

./: .gitignore
effective_rates/: Cargo.toml
effective_rates/src/: main.rs
equilibrium_toy_model/: pyproject.toml  run.py
equilibrium_toy_model/inputs/: graph.csv  states.csv  values.py
full_antiporter_example/: antiporter_model.ipynb  equil.py  generate_paper_tables.py  nonequilibrium.ipynb  pka_kd_values.py  pyproject.toml  rate_estimates.ipynb  rate_scaling_effects.ipynb  transport.py
full_antiporter_example/inputs/: diffusion_rates.csv  diffusion_rates_large.csv  diffusion_rates_scaled.csv  md_rates.csv  rates.csv
math_notebooks/: covar.nb  errors_rates.nb
nmr_data_fitting/: generate_pka_table.py  main.py  pub_img.ipynb  pyproject.toml
nmr_data_fitting/data/: nmr_center.csv  nmr_center.csv.bak  nmr_side.csv
nmr_data_fitting/mol_img/: main.py
nmr_data_fitting/multibind_inputs/: best_graph.csv  best_graph.csv.bak  best_graph.csv.bak.blue
nmr_data_fitting/runs/0f70019b-8a3d-4ada-a6be-81f80564af7f-side/inputs/: best_graph.csv  graph.csv
nmr_data_fitting/runs/9dfbfebf-46c2-4b0f-9f61-88a9d3005b9a-center/inputs/: best_graph.csv  states.csv
nmr_data_fitting/runs/c13e70b4-ee59-45f8-b113-ab0ed37bbeb3-None/inputs/: best_graph.csv
thermodynamic_rates/: nonequilibrium.ipynb  pyproject.toml  transport.ipynb  transport.py  transport_movie.py
thermodynamic_rates/input_generation/: chem.py  pyproject.toml  rate_table.py
thermodynamic_rates/inputs/: rates.csv  rates_transport.csv
thermodynamic_rates/lua/: calc.lua  proton_on_off_rates.lua  rate_table.lua
