[tool.poetry]
name = "equilibrium_toy_model"
version = "0.1.0"
description = ""
authors = ["Ian Kenney <ikenney@asu.edu>"]

[tool.poetry.dependencies]
python = "^3.10,<3.11"
multibind = "^0.2.0"
matplotlib = "^3.5.1"
numpy = "^1.22.3"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
pdbpp = "^0.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
