[tool.poetry]
name = "full_antiporter"
version = "0.1.0"
description = ""
authors = ["Ian Kenney <ikenney@asu.edu>"]

[tool.poetry.dependencies]
python = "^3.9,<3.11"
numpy = "^1.22.3"
multibind = "^0.2.0"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
jupyterlab = "^3.3.4"
pdbpp = "^0.10.3"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
python-lsp-server = "^1.6.0"
pep8 = "^1.7.1"
autopep8 = "^2.0.0"
pydocstyle = "^6.1.1"
pylsp-mypy = "^0.6.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
