[tool.poetry]
name = "input_generation"
version = "0.1.0"
description = ""
authors = ["Ian Kenney <ikenney@asu.edu>"]

[tool.poetry.dependencies]
python = "^3.10,<3.11"
multibind = "^0.2.0"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
